#24 has been incorporated already
We need to add some evidence for #28

#32 is also implicit in the text

But the most important, make or break it, is #33 and that is difficult to measure. The only thing I can think of is to measure whether time-to-solution is improved or becomes worse with time, or it starts with being better than the average and ends up worse or the obverse. However, this research question is very tricky and we will have to consider it very carefully

--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -39,20 +39,22 @@ You can, however, go a bit further and embrace that same agile mindset in all st
 Manifestos are never enough either in development or teaching, and agile development encourages the adoption of best practices in every phase of development; but the last part of the manifesto, which talks about continuous improvement, as well as the fact that we are talking about {\em best} practices, would need some way of measuring progress and how adopted practices affect the classroom. This is why we would like to add a new item to the manifesto: {\em learning analytics} \cite{clow2013overview} over anecdotal evidence or end-of-class failure/success rates.
 
 Within this agile mindset, there are teaching methodologies that fit better, and which are better suited for student-centered learning \cite{wright2011student}; adopting these best practices is the first step towards agile teaching. Along our teaching experience, we are uncovering better ways of teaching by doing it and helping students learn. Through this work we have come to value\begin{itemize}
-\item Flipped learning \cite{karabulut2018systematic} over traditional lecture-based learning. Flipped learning {\em flips} the concept of class and classroom, making the classroom a space for student-centered, autonomous learning, with the teacher providing material and guidance. However, this concept by itself does not constrain the kind of material the teacher will provide or how this will be sequencer or organized. We need additional best practices in this area, like the ones below.
-\item Project-based learning \cite{krajcik2006project,7274311} over traditional lecture-based learning. It gives the student autonomy (which is one of the items in the above mentioned manifesto) through the development of a project across one or several subjects, as opposed to being the receptors of an one-way flow of information.
-
-\item formative evaluation \cite{tessmer1994formative} also fits the autonomous learning part of the manifesto, but also focuses on learning objectives, since it pursues helping the student through continuous feedback on their submitted work (that advances the project mentioned above). This feedback helps continuous improvement of the project they are working with, which is other of the items in the manifesto. Finally, {\em flipped learning} \cite{otero2018flipped}, that turns classrooms into working, and not student-listening-to-lectures spaces, is another best practices that blends well with the two mentioned above.
+\item Flipped learning \cite{karabulut2018systematic,otero2018flipped} over traditional lecture-based learning. Flipped learning {\em flips} the concept of class and classroom, making the classroom a space for student-centered, autonomous learning, with the teacher providing material and guidance. However, this concept by itself does not constrain the kind of material the teacher will provide or how this will be sequencer or organized. We need additional best practices in this area, like the ones below.
+\item Project-based learning \cite{krajcik2006project,7274311} over traditional lecture-based learning. It gives the student autonomy (which is one of the items in the above mentioned manifesto) through the development of a project across one or several subjects, as opposed to being the receptors of an one-way flow of information. One of the challenges in this methodology is ensuring that the project is aligned with the learning objectives of the subject, and that the student is able to learn from the project. This is where the next best practice comes in.
+\item Specifications/contract grading \cite{nilson2015specifications} over point-based grading, where learning objectives have a certain amount of credit that is conceded to the student when the objective is reached. But this methodology does not specify how to help the student reach that objective. We will need to apply the next best practice to help the student do that
+\item Formative evaluation \cite{tessmer1994formative} vs. summative evaluation, which also fits the autonomous learning part of the manifesto, focusing on learning objectives, since it pursues helping the student through continuous feedback on their submitted work (that advances the project mentioned above). This feedback helps the continuous improvement of the project they are working with, which is other of the items in the manifesto and another best practices approach adopted.
 \end{itemize}
 
 
 
 In this paper we will describe the experience carried out in the last three school years in a 4th year (7th semester) subject in the Computer Science degree at the University of Granada, Spain;
 the subject deals with Cloud Computing,
-so the project needs to be working towards the deployment of an application of that kind. But alongside the description of the experience, we will try to answer the following research questions:\begin{itemize}
-\item {\bf RQ1:} Can you leverage metrics to improve individual and collective learning?
-\item {\bf RQ2:} Are there early indicators or class success or failure?
-\item {\bf RQ3:} Can we measure the effect of flipped learning through the gathered software analytics?
+so the project needs to be working towards the deployment of an application of that kind. We will explain how these practices have been effectively implemented, how they fit together, and how we can measure their effectivity and obtain data that can be used to improve the learning experience using learning analytics.
+
+Using experimental data, we will try to answer the following research questions:\begin{itemize}
+\item {\bf RQ1:} Is the effectivity of adopted practices revealed in the collected data?
+\item {\bf RQ2:} Are there early indicators or class success or failure and can we use them to improve the learning experience?
+\item {\bf RQ3:} Can analytics help us define a measure of successful learning experience?
 \end{itemize}
 
 The rest of the paper is organized as follows: next we will present the state of the art in learning analytics applied to evaluative formation and flipped learning. The class setup, as well as how data is collected will be presented in Section \ref{sec:setup}. The results of the analysis will be presented in Section \ref{sec:results} along with the answers to the research questions. Finally we will draw some conclusions in Section \ref{sec:conclusions}.
