--- a/pbl.bib
+++ b/pbl.bib
@@ -73,11 +73,6 @@ eprint = {https://doi.org/10.1177/1365480216659733},
   publisher={Springer}
 }
 
-
-
-
-
-
 @article{doi:10.1080/00461520.1991.9653139,
 author = {Phyllis C. Blumenfeld, Elliot Soloway, Ronald W. Marx, Joseph S. Krajcik, Mark Guzdial and Annemarie Palincsar},
 title = {Motivating Project-Based Learning: Sustaining the Doing, Supporting the Learning},
@@ -88,15 +83,7 @@ pages = {369-398},
 year = 1991,
 publisher = {Routledge},
 doi = {10.1080/00461520.1991.9653139},
-
-
-URL = { 
-    
-        https://doi.org/10.1080/00461520.1991.9653139
-    
-    
-
-},
+URL = {https://doi.org/10.1080/00461520.1991.9653139},
 eprint = { 
     
         https://doi.org/10.1080/00461520.1991.9653139
