--- a/formative-evaluation.bib
+++ b/formative-evaluation.bib
@@ -7,18 +7,8 @@ number = {9},
 pages = {3179-3193},
 year = {2023},
 doi = {10.1021/acs.jchemed.2c00740},
-
-URL = { 
-    
-        https://doi.org/10.1021/acs.jchemed.2c00740
-    
-    
-
-},
-eprint = { 
-    
-        https://doi.org/10.1021/acs.jchemed.2c00740
-}
+URL = {https://doi.org/10.1021/acs.jchemed.2c00740},
+eprint = {https://doi.org/10.1021/acs.jchemed.2c00740}
 }
 
 
