Making a more focused introduction to SoA #31

--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -63,7 +63,13 @@ The rest of the paper is organized as follows: next we will present the state of
 
 \section{State of the art}
 
+
+The pedagogic framework of the class in which we are basing this study follows best practices, if not mainstream practices, in higher education. There is already a good amount of evidence that supports these practices, mainly separately. But the focus on this paper is how to extract intra-course and post-course evidence of the separate effectiveness of the implementation of these practices. Generically, measurements related to class performance are called Learning Analytics.
+
 Learning analytics (LA) \cite{clow2013overview} have been applied to all kind of learning processes and subjects; this includes problem-based learning combined with formative assessment (FA); \cite{aljohani2013learning} mentions that learning analytics and formative assessment work well together since they both provide immediate feedback on the quality of the learning process; however, it can be argued that LA is an essential part of FA, since a deep understanding of the objectives achieved by students is needed in order to provide student-specific feedback. In general, however, LA will refer to additional, macro-measurements at a class level or analytics that compare student performance with other students or with previous years \cite{zhang2023learning}. This last paper reveals an increasing interest in FA combined with LA, with computer science courses leading the way, but with other disciplines and subjects also using it to improve success rates.
+
+
+
 However, there are no general rules on what specific analytics should be used. In general, it is important to consider a learning (and possibly learner) model in order to be able to correctly measure learning outcomes and how they are reached. For instance, \cite{stanja2023formative} focuses on {\em conceptions}, how the students understand (or not) certain specific and common ideas, thus their process is geared towards using common assessment tools to measure understanding of those conceptions.  Student attitude and disposition towards learning can be as interesting as a model but impossible to measure without explicitly asking the student; that is why authors such as \cite{tempelaar2020learning} propose a framework that combines traces with surveys in order to predict outcomes such as early drop out.
 
 What seems to be missing is, however, a single set of learning process measurements that can be used across any platform, subject, or way of deployment of formative assessment strategies, and which can be used for individual assessment, as well as aggregated for class and course assessment. This is what we will try to propose and evaluate next, after exposing how our class has been set up in the next Section.
@@ -71,7 +77,7 @@ What seems to be missing is, however, a single set of learning process measureme
 \section{Class setup and methodology}
 \label{sec:setup}
 
-Problem-based learning make students work on their own project and repository; this course will have 10 levels of project completion ("objectives"), numbered from 0 to 9. For every objective they will create a branch and a pull request from that branch to their main one; a pull request is a "request to merge" a set of changes; acceptance of that PR will imply merging into the main branch (and, in real world, usually deployment to production). This class setup matches the agile philosophy which prefers interaction and working software over "comprehensive documentation" (which, in a class environment, would mainly be "theoretical" classes and memory-based exams). At the same time, PRs are the main interaction medium in software development: it allows members of the team to perform quality (and other, such as compliance) checks on the code that is going to be used; this matches the requirements of formative evaluation too. The professor (and other students who have also overcome that specific objective) will review that PR, request changes if it falls short of reaching the objectives, and eventually accept it when it does.
+Problem-based learning make students work on their own project and (in the case of software engineering) repository; this course will have 10 levels of project completion ("objectives"), numbered from 0 to 9. For every objective they will create a branch and a pull request from that branch to their main one; a pull request is a "request to merge" a set of changes; acceptance of that PR will imply merging into the main branch (and, in real world, usually deployment to production). This class setup matches the agile philosophy which prefers interaction and working software over "comprehensive documentation" (which, in a class environment, would mainly be "theoretical" classes and memory-based exams). At the same time, PRs are the main interaction medium in software development: it allows members of the team to perform quality (and other, such as compliance) checks on the code that is going to be used; this matches the requirements of formative evaluation too. The professor (and other students who have also overcome that specific objective) will review that PR, request changes if it falls short of reaching the objectives, and eventually accept it when it does.
 
 Since these PRs happen in the students' repos, we need a single, centralized place as a {\em platform} to have an unified view of the whole class; this is carried out via a single, "class" repository, where the students submit a PR to a file that is different for each objective, triggering a workflow with a series of baseline tests of correctness of the PR submitted. When the student overcomes the objective, a mark is inserted into the same file by the professor. Automatic workflows then analyze these files to generate a data file that records these events and when they occur. This file is the single source of truth for the state of every objective for every student, and will be analyzed to study the progress of the class.
 
