--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -41,7 +41,7 @@ Manifestos are never enough either in development or teaching, and agile develop
 Within this agile mindset, there are teaching methodologies that fit better, and which are better suited for student-centered learning \cite{wright2011student}; adopting these best practices is the first step towards agile teaching. Along our teaching experience, we are uncovering better ways of teaching by doing it and helping students learn. Through this work we have come to value\begin{itemize}
 \item Flipped learning \cite{karabulut2018systematic,otero2018flipped} over traditional lecture-based learning. Flipped learning {\em flips} the concept of class and classroom, making the classroom a space for student-centered, autonomous learning, with the teacher providing material and guidance. However, this concept by itself does not constrain the kind of material the teacher will provide or how this will be sequencer or organized. We need additional best practices in this area, like the ones below.
 \item Project-based learning \cite{krajcik2006project,7274311} over traditional lecture-based learning. It gives the student autonomy (which is one of the items in the above mentioned manifesto) through the development of a project across one or several subjects, as opposed to being the receptors of an one-way flow of information. One of the challenges in this methodology is ensuring that the project is aligned with the learning objectives of the subject, and that the student is able to learn from the project. This is where the next best practice comes in.
-\item Specifications/contract grading \cite{nilson2015specifications} over point-based grading, where learning objectives have a certain amount of credit that is conceded to the student when the objective is reached. But this methodology does not specify how to help the student reach that objective. We will need to apply the next best practice to help the student do that
+\item Specifications/contract grading \cite{nilson2015specifications}, often called {\em ungrading} \cite{spurlock2023improving} over point-based grading, where learning objectives have a certain amount of credit that is conceded to the student when the objective is reached. But this methodology does not specify how to help the student reach that objective. We will need to apply the next best practice to help the student do that
 \item Formative evaluation \cite{tessmer1994formative} vs. summative evaluation, which also fits the autonomous learning part of the manifesto, focusing on learning objectives, since it pursues helping the student through continuous feedback on their submitted work (that advances the project mentioned above). This feedback helps the continuous improvement of the project they are working with, which is other of the items in the manifesto and another best practices approach adopted.
 \end{itemize}
 
