--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -57,7 +57,9 @@ Using experimental data, we will try to answer the following research questions:
 \item {\bf RQ3:} Can learning analytics help us define a measure of successful learning experience?
 \end{itemize}
 
-We are interested in two axes of agile adaptation. The first one is to implement best practices in such a way that they fit better the profile of students that are present in a specific year; the second one is to find metrics that give us the power of diagnosing which implementation of best practices has added the most value to the students of a specific year, so as to adapt pedagogical design from one year to the next. In the rest of the paper we will use analytics collected during the previous 3 courses, as well as other evidence mainly from anonymous surveys made to students. All data is anonymized and no personal data is used in this paper; it is also available under a free license in the same repository as this paper.
+We are interested in two axes of agile adaptation. The first one is to implement best practices in such a way that they fit better the profile of students that are present in a specific year; the second one is to find metrics that give us the power of diagnosing which implementation of best practices has added the most value to the students of a specific year, so as to adapt pedagogical design from one year to the next. In the rest of the paper we will use analytics collected during the previous 3 courses, as well as other evidence mainly from anonymous surveys made to students. Our contribution also includes the practical implementation of different best practices together in a single class, which has besides been used repeatedly across three consecutive years. This provides a framework that can be translated directly into other higher education engineering courses, as well as other practice or skill-oriented subject matters.
+
+All data is anonymized and no personal data is used in this paper; it is also available under a free license in the same repository as this paper.
 
 The rest of the paper is organized as follows: next we will present the state of the art in learning analytics applied to evaluative formation and flipped learning. The class setup, as well as how data is collected will be presented in Section \ref{sec:setup}. The results of the analysis will be presented in Section \ref{sec:results} along with the answers to the research questions. Finally we will draw some conclusions in Section \ref{sec:conclusions}.
 
