Introducing ungrading in SoA

--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -68,6 +68,8 @@ The rest of the paper is organized as follows: next we will present the state of
 
 The pedagogic framework of the class in which we are basing this study follows best practices, if not mainstream practices, in higher education. There is already a good amount of evidence that supports these practices, mainly separately. But the focus on this paper is how to extract intra-course and post-course evidence of the separate effectiveness of the implementation of these practices. Generically, measurements related to class performance are called Learning Analytics.
 
+The practice of contract/specifications grading or ungrading has been used repeatedly in engineering courses \cite{carlon2023educational,10.1145/3587102.3588816}; besides, \cite{carlon2023educational} has used learning analytics on the approach to assess the quality, and even assign credit, to online courses. As mentioned by \cite{spurlock2023improving}, ungrading is quintessentially student centered, reducing anxiety and changing the attitude of students towards learning. So far, it has not been combined with other techniques in the way we have done, or assessed in that specific context
+
 Learning analytics (LA) \cite{clow2013overview} have been applied to all kind of learning processes and subjects; this includes problem-based learning combined with formative assessment (FA); \cite{aljohani2013learning} mentions that learning analytics and formative assessment work well together since they both provide immediate feedback on the quality of the learning process; however, it can be argued that LA is an essential part of FA, since a deep understanding of the objectives achieved by students is needed in order to provide student-specific feedback. In general, however, LA will refer to additional, macro-measurements at a class level or analytics that compare student performance with other students or with previous years \cite{zhang2023learning}. This last paper reveals an increasing interest in FA combined with LA, with computer science courses leading the way, but with other disciplines and subjects also using it to improve success rates.
 
 
