--- a/student-centered-learning.bib
+++ b/student-centered-learning.bib
@@ -16,3 +16,48 @@
   pages={631--637},
   year={2023}
 }
+
+@incollection{carlon2023educational,
+  title={Educational Data Science Approach for an End-to-End Quality Assurance Process for Building Creditworthy Online Courses},
+  author={Carlon, May Kristine Jonson and Boonyubol, Sasipa and Keerativoranan, Nopphon and Cross, Jeffrey S},
+  booktitle={Educational Data Science: Essentials, Approaches, and Tendencies: Proactive Education based on Empirical Big Data Evidence},
+  pages={151--191},
+  year={2023},
+  publisher={Springer}
+}
+
+@Inbook{Carlon2023,
+author="Carlon, May Kristine Jonson
+and Boonyubol, Sasipa
+and Keerativoranan, Nopphon
+and Cross, Jeffrey S.",
+editor="Pe{\~{n}}a-Ayala, Alejandro",
+title="Educational Data Science Approach for an End-to-End Quality Assurance Process for Building Creditworthy Online Courses",
+bookTitle="Educational Data Science: Essentials, Approaches, and Tendencies: Proactive Education based on Empirical Big Data Evidence",
+year="2023",
+publisher="Springer Nature Singapore",
+address="Singapore",
+pages="151--191",
+abstract="Despite for-credit distance education existing since the latter half of the nineteenth century, the creditworthiness of massive open online courses (MOOCs), a form of distance education, remains debatable outside a few domains. This may be due to the perceived lack of quality in MOOCs, either due to the wide variety of MOOCs or the difficulty in translating quality expectations from brick-and-mortar courses to online courses. In this chapter, the quality expectations for stereotypical university credit are explored and compared with emerging patterns in MOOCs. Based on this analysis, a data-driven end-to-end quality assurance (QA) process to bridge the gap is proposed. Portions of this process are demonstrated using the Tokyo Institute of Technology's (Tokyo Tech) MOOCs as case studies. This demonstration has shown how a modified Deming cycle can provide actionable quality improvement measures at different stages of the MOOC cycle. In particular, each stage has showcased how the most commonly used approaches in educational data science (EDS), namely, educational data mining (EDM) and learning analytics (LA), are applied to gather information, course contents, and learner feedback data from various interested parties as support evidence for for-credit MOOCs. Henceforth, for improving quality assurance, this demonstration helps clarify the concerns regarding the worthiness of the online learning experience.",
+isbn="978-981-99-0026-8",
+doi="10.1007/978-981-99-0026-8_4",
+url="https://doi.org/10.1007/978-981-99-0026-8_4"
+}
+
+@inproceedings{10.1145/3587102.3588816,
+author = {Theobold, Allison S.},
+title = {Human Centered Data Science: Ungrading in an Introductory Data Science Course},
+year = {2023},
+isbn = {9798400701382},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3587102.3588816},
+doi = {10.1145/3587102.3588816},
+abstract = {The COVID-19 pandemic caused the flaws of traditional grading systems to become even more apparent. In response, a growing number of educators are transitioning their classrooms to focus on alternative methods of assessment. These subversive methods promote more equitable assessments, as they provide a more accurate picture of what a student has learned, cultivate students' intrinsic motivation, and do not privilege students from certain backgrounds. This article details how alternative grading, specifically "ungrading," was integrated into an introductory data science course. I detail how the course components align with the principles of alternative grading, students' responses to the course structure, and the lessons I learned along the way. Finally, I close with a discussion of how infusing alternative methods of assessment into the classroom stands to cultivate the diversity continually lacking in computer science and data science.},
+booktitle = {Proceedings of the 2023 Conference on Innovation and Technology in Computer Science Education V. 1},
+pages = {327–333},
+numpages = {7},
+keywords = {equitable pedagogy, equitable assessment, data science education, alternative assessment},
+location = {<conf-loc>, <city>Turku</city>, <country>Finland</country>, </conf-loc>},
+series = {ITiCSE 2023}
+}
