Updating slightly the state of the art

--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -70,13 +70,11 @@ The pedagogic framework of the class in which we are basing this study follows b
 
 The practice of contract/specifications grading or ungrading has been used repeatedly in engineering courses \cite{carlon2023educational,10.1145/3587102.3588816}; besides, \cite{carlon2023educational} has used learning analytics on the approach to assess the quality, and even assign credit, to online courses. As mentioned by \cite{spurlock2023improving}, ungrading is quintessentially student centered, reducing anxiety and changing the attitude of students towards learning. So far, it has not been combined with other techniques in the way we have done, or assessed in that specific context
 
-Learning analytics (LA) \cite{clow2013overview} have been applied to all kind of learning processes and subjects; this includes problem-based learning combined with formative assessment (FA); \cite{aljohani2013learning} mentions that learning analytics and formative assessment work well together since they both provide immediate feedback on the quality of the learning process; however, it can be argued that LA is an essential part of FA, since a deep understanding of the objectives achieved by students is needed in order to provide student-specific feedback. In general, however, LA will refer to additional, macro-measurements at a class level or analytics that compare student performance with other students or with previous years \cite{zhang2023learning}. This last paper reveals an increasing interest in FA combined with LA, with computer science courses leading the way, but with other disciplines and subjects also using it to improve success rates.
+Learning analytics (LA) \cite{clow2013overview} have been applied to all kind of learning processes and subjects; this includes problem-based learning combined with formative assessment (FA); \cite{aljohani2013learning} mentions that learning analytics and formative assessment work well together since they both provide immediate feedback on the quality of the learning process; however, it can be argued that LA is an essential part of FA, since a deep understanding of how objectives achieved by students and how long it takes is needed in order to provide student-specific feedback. In general, however, LA will refer to additional, macro-measurements at a class level or analytics that compare student performance with other students or with previous years \cite{zhang2023learning}. This last paper reveals an increasing interest in FA combined with LA, with computer science courses leading the way, but with other disciplines and subjects also using it to improve success rates.
 
+However, there are no general rules on what specific analytics should be used, or a general framework that tells {\em what} should we measured and how those measures reflect something beyond a general class-wide performance; even less so how to use them for pinpointing issues with class design, in order to make amendments of improvements within an academic course, by the beginning of it, or in the end. In general, it is considered important to consider a learning (and possibly learner) model in order to be able to correctly measure learning outcomes and how they are reached. For instance, \cite{stanja2023formative} focuses on {\em conceptions}, how the students understand (or not) certain specific and common ideas, thus their process is geared towards using common assessment tools to measure understanding of those conceptions.  Student attitude and disposition towards learning can be as interesting as a model but impossible to measure without explicitly asking the student; that is why authors such as \cite{tempelaar2020learning} propose a framework that combines traces (that is, logs of results) with surveys in order to predict outcomes such as early drop out.
 
-
-However, there are no general rules on what specific analytics should be used. In general, it is important to consider a learning (and possibly learner) model in order to be able to correctly measure learning outcomes and how they are reached. For instance, \cite{stanja2023formative} focuses on {\em conceptions}, how the students understand (or not) certain specific and common ideas, thus their process is geared towards using common assessment tools to measure understanding of those conceptions.  Student attitude and disposition towards learning can be as interesting as a model but impossible to measure without explicitly asking the student; that is why authors such as \cite{tempelaar2020learning} propose a framework that combines traces with surveys in order to predict outcomes such as early drop out.
-
-What seems to be missing is, however, a single set of learning process measurements that can be used across any platform, subject, or way of deployment of formative assessment strategies, and which can be used for individual assessment, as well as aggregated for class and course assessment. This is what we will try to propose and evaluate next, after exposing how our class has been set up in the next Section.
+This last approach is closer to what we present in this paper, an approach that combines a framework for class design (agile, student-centered learning) with a framework for measuring outcomes (learning analytics) that includes specific suggestions of measurements, as well as class surveys. We will use this framework to answer the research questions presented in the introduction. Next we will present the pedagogic design used for this course, the academic context, and how data is collected.
 
 \section{Class setup and methodology}
 \label{sec:setup}
