--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -79,6 +79,11 @@ This last approach is closer to what we present in this paper, an approach that 
 \section{Class setup and methodology}
 \label{sec:setup}
 
+In this section we will first show how the different best practices fit together in an unitary class design framework, to proceed to explain how data is collected in the next subsection.
+
+\subsection{Class setup}
+
+
 Problem-based learning make students work on their own project and (in the case of software engineering) repository; this course will have 10 levels of project completion ("objectives"), numbered from 0 to 9. For every objective they will create a branch and a pull request from that branch to their main one; a pull request is a "request to merge" a set of changes; acceptance of that PR will imply merging into the main branch (and, in real world, usually deployment to production). This class setup matches the agile philosophy which prefers interaction and working software over "comprehensive documentation" (which, in a class environment, would mainly be "theoretical" classes and memory-based exams). At the same time, PRs are the main interaction medium in software development: it allows members of the team to perform quality (and other, such as compliance) checks on the code that is going to be used; this matches the requirements of formative evaluation too. The professor (and other students who have also overcome that specific objective) will review that PR, request changes if it falls short of reaching the objectives, and eventually accept it when it does.
 
 Since these PRs happen in the students' repos, we need a single, centralized place as a {\em platform} to have an unified view of the whole class; this is carried out via a single, "class" repository, where the students submit a PR to a file that is different for each objective, triggering a workflow with a series of baseline tests of correctness of the PR submitted. When the student overcomes the objective, a mark is inserted into the same file by the professor. Automatic workflows then analyze these files to generate a data file that records these events and when they occur. This file is the single source of truth for the state of every objective for every student, and will be analyzed to study the progress of the class.
@@ -101,6 +106,11 @@ In our country universitary system and for this subject, classes and evaluations
 \item The {\em extraordinary evaluation period}, which takes place up to 3 weeks after the ordinary evaluation period.
 \end{itemize}
 
+
+\subsection{Data collection}
+
+% Need to expand a bit here
+%
 Whoever passes the minimum number of objectives during the ordinary period is evaluated during that period; if that is not the case, students can continue submitting the rest of their objectives up to the end of the extraordinary evaluation period. Data has been collected in this way for three consecutive school years: 2021-22, 2022-23 and 2023-24\footnote{Incomplete at the time of this writing}. After the course is over, student GitHub nicks are anonymized with a one-way hash so that privacy is preserved\footnote{Even if students are warned to use whatever GitHub nick they want, including an anonymous, class-only one. The only thing needed for the teacher is to be able to clearly identify which student corresponds to every nick}. These are publicly available at \url{https://github.com/JJ/ivR}.
 
 Next we will choose metrics and analyze the kind of insights we can obtain from them, and how they can be used to improve learning outcomes.
