:recycle: introducing class setup

--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -83,8 +83,12 @@ In this section we will first show how the different best practices fit together
 
 \subsection{Class setup}
 
+One of the first steps in class design is to decide how learning objectives are going to be organized, as well as evaluated; immediately follows how these contents are going to be delivered and assessed.
 
-Problem-based learning make students work on their own project and (in the case of software engineering) repository; this course will have 10 levels of project completion ("objectives"), numbered from 0 to 9. For every objective they will create a branch and a pull request from that branch to their main one; a pull request is a "request to merge" a set of changes; acceptance of that PR will imply merging into the main branch (and, in real world, usually deployment to production). This class setup matches the agile philosophy which prefers interaction and working software over "comprehensive documentation" (which, in a class environment, would mainly be "theoretical" classes and memory-based exams). At the same time, PRs are the main interaction medium in software development: it allows members of the team to perform quality (and other, such as compliance) checks on the code that is going to be used; this matches the requirements of formative evaluation too. The professor (and other students who have also overcome that specific objective) will review that PR, request changes if it falls short of reaching the objectives, and eventually accept it when it does.
+In our case, we have opted for problem-based learning as the backbone of our approach. Problem-based learning make students work on their own project and (in the case of software engineering) repository, thus providing a guiding principle for the assimilation of contents, as well as scaffolding for its assessment when certain stages in the project are reached. Project stages need to be aligned with  learning objectives. In our case,
+this course will have 10 levels of project completion (which we will call, from now on, "objectives", since they are aligned with high-level learning objectives in the course), numbered from 0 to 9.
+
+For every objective they reach, they will create a branch and a pull request from that branch to their main one; a pull request is a "request to merge" a set of changes; acceptance of that PR will imply merging into the main branch (and, in real world, usually deployment to production). This class setup matches the agile philosophy which prefers interaction and working software over "comprehensive documentation" (which, in a class environment, would mainly be "theoretical" classes and memory-based exams). At the same time, PRs are the main interaction medium in software development: it allows members of the team to perform quality (and other, such as compliance) checks on the code that is going to be used; this matches the requirements of formative evaluation too. The professor (and other students who have also overcome that specific objective) will review that PR, request changes if it falls short of reaching the objectives, and eventually accept it when it does.
 
 Since these PRs happen in the students' repos, we need a single, centralized place as a {\em platform} to have an unified view of the whole class; this is carried out via a single, "class" repository, where the students submit a PR to a file that is different for each objective, triggering a workflow with a series of baseline tests of correctness of the PR submitted. When the student overcomes the objective, a mark is inserted into the same file by the professor. Automatic workflows then analyze these files to generate a data file that records these events and when they occur. This file is the single source of truth for the state of every objective for every student, and will be analyzed to study the progress of the class.
 
