Expanding the data collection

--- a/pbl.bib
+++ b/pbl.bib
@@ -1,3 +1,33 @@
+@inproceedings{10.1145/3350768.3353903,
+author = {de Andrade, Stev\~{a}o Alves and de Oliveira Neves, V\^{a}nia and Delamaro, M\'{a}rcio Eduardo},
+title = {Software Testing Education: dreams and challenges when bringing academia and industry closer together},
+year = {2019},
+isbn = {9781450376518},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3350768.3353903},
+doi = {10.1145/3350768.3353903},
+abstract = {Software systems are present in people's lives and they are increasing to the same extent as their complexity and their criticality. Therefore, we must ensure that these systems maintain high quality in order to behave as expected. To develop high quality software, it is essential to have qualified people who are knowledgeable about Validation and Verification (V&V) techniques, especially software testing. This paper reports on the teaching process in two undergraduate courses in two different contexts: Computer Science students, who can dedicate more time during the day to studying, and Information Systems students, who can only study during the evenings. To engage and motivate the students in the context of software testing learning, we studied ways to bring real industry problems to the classroom in order to adopt the Problem-based Learning (PBL) approach. We chose two real open source projects which, considering the feedback from students and professors, was a good decision. However, the approach requires students to take extra classes rather than teacher-centered approaches. Extra classes may hinder the approach when the class consists of students who work during the day, thus developing a balance between student-centered and teacher-centered can be a good solution in such contexts.},
+booktitle = {Proceedings of the XXXIII Brazilian Symposium on Software Engineering},
+pages = {47–56},
+numpages = {10},
+keywords = {PBL, Software testing, education, industry, problem-based learning},
+location = {Salvador, Brazil},
+series = {SBES '19}
+}
+
+@INPROCEEDINGS{9028685,
+  author={Hu, Zhewei and Gehringer, Edward F.},
+  booktitle={2019 IEEE Frontiers in Education Conference (FIE)},
+  title={Improving Feedback on GitHub Pull Requests: A Bots Approach},
+  year={2019},
+  volume={},
+  number={},
+  pages={1-9},
+  keywords={Tools;Bot (Internet);Meteorology;Guidelines;Education;Programming;Internet bots;open-source software;software engineering;open-source curriculum;automated feedback;Expertiza},
+  doi={10.1109/FIE43999.2019.9028685}}
+
+
 @article{doi:10.1177/1365480216659733,
 author = {Dimitra Kokotsaki and Victoria Menzies and Andy Wiggins},
 title ={Project-based learning: A review of the literature},
