--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -83,14 +83,16 @@ In this section we will first show how the different best practices fit together
 
 \subsection{Class setup}
 
-One of the first steps in class design is to decide how learning objectives are going to be organized, as well as evaluated; immediately follows how these contents are going to be delivered and assessed.
+One of the first steps in class design is to decide how learning objectives are going to be organized, as well as evaluated; from it, it follows immediately how these contents are going to be delivered and assessed.
 
 In our case, we have opted for problem-based learning as the backbone of our approach. Problem-based learning make students work on their own project and (in the case of software engineering) repository, thus providing a guiding principle for the assimilation of contents, as well as scaffolding for its assessment when certain stages in the project are reached. Project stages need to be aligned with  learning objectives. In our case,
 this course will have 10 levels of project completion (which we will call, from now on, "objectives", since they are aligned with high-level learning objectives in the course), numbered from 0 to 9.
 
-For every objective they reach, they will create a branch and a pull request from that branch to their main one; a pull request is a "request to merge" a set of changes; acceptance of that PR will imply merging into the main branch (and, in real world, usually deployment to production). This class setup matches the agile philosophy which prefers interaction and working software over "comprehensive documentation" (which, in a class environment, would mainly be "theoretical" classes and memory-based exams). At the same time, PRs are the main interaction medium in software development: it allows members of the team to perform quality (and other, such as compliance) checks on the code that is going to be used; this matches the requirements of formative evaluation too. The professor (and other students who have also overcome that specific objective) will review that PR, request changes if it falls short of reaching the objectives, and eventually accept it when it does.
+For every objective they reach, they will create a branch in their repository and a pull request from that branch to the main one; a pull request is a "request to merge" a set of changes; acceptance of that PR will imply merging into the main branch (and, in real world, usually deployment to production). Pull requests have been used repeatedly in software engineering course, mainly with the objective of immersing the students in the same kind of workflow they will find in the industry \cite{10.1145/3350768.3353903}. This kind of learning environment follows the agile philosophy which prefers interaction and working software over "comprehensive documentation" (which, in a class environment, would mainly be "theoretical" classes and memory-based exams). At the same time, PRs are the main interaction medium in software development: it allows members of the team to perform quality (and other, such as compliance) checks on the code that is going to be used; this matches the requirements of formative evaluation too. The professor (and other students who have also overcome that specific objective) will review that PR, request changes if it falls short of reaching the objectives, and eventually accept it when it does.
 
-Since these PRs happen in the students' repos, we need a single, centralized place as a {\em platform} to have an unified view of the whole class; this is carried out via a single, "class" repository, where the students submit a PR to a file that is different for each objective, triggering a workflow with a series of baseline tests of correctness of the PR submitted. When the student overcomes the objective, a mark is inserted into the same file by the professor. Automatic workflows then analyze these files to generate a data file that records these events and when they occur. This file is the single source of truth for the state of every objective for every student, and will be analyzed to study the progress of the class.
+Since these PRs happen in the students' repos, we need a single, centralized place as a {\em platform} to have an unified view of the whole class; this is carried out via a single, class-wide repository, where the students submit a PR to a file that is different for each objective, triggering a workflow with a series of baseline tests of correctness of the PR submitted. This falls short of AI-based environments such as the one described in \cite{9028685}, but it certainly gives an immediate assessment of how closely the guidelines for reaching the learning objective have been followed. The description of failed tests has been made so that they are self-explanatory, and the student can understand what is wrong and how to fix it. As many resubmissions as needed can be made, until all tests have passed. When that happens, the PR is accepted and the second phase of revision takes place. In this second phase, the professor has the last word, but random students are also asked to review the PR, as many as five, chosen among those that have already passed the objective; the amount of revisions made are rewarded with additional credit.
+
+The professor approves the pull request in the student repository when all learning objectives have been reached; when that happens, a mark is inserted into the file in the general repository by the professor.
 
 The student needs to pass objective number 5 to get a passing grade; every objective beyond that one works toward obtaining full marks. Objectives receive a different percentage of the total grade depending on the actual amount of work they need. The percentage was adjusted depending on the amount of time students needed from submission to passing the objective in the first year. It did not need further adjustments in the following years. {\em Bigger} objectives get 15\% of the grade, while the smallest ones (for instance, the first one) can get only 5 \%. All students passing a certain objective obtain the same grade; this is why formative evaluation is often called {\em grade-less}, since learning objectives are reached or not, and when reached, everyone gets the same grade. Different grades correspond only to the fact that different objectives are reached.
 
@@ -116,6 +118,8 @@ In our country universitary system and for this subject, classes and evaluations
 % Need to expand a bit here
 %
 Whoever passes the minimum number of objectives during the ordinary period is evaluated during that period; if that is not the case, students can continue submitting the rest of their objectives up to the end of the extraordinary evaluation period. Data has been collected in this way for three consecutive school years: 2021-22, 2022-23 and 2023-24\footnote{Incomplete at the time of this writing}. After the course is over, student GitHub nicks are anonymized with a one-way hash so that privacy is preserved\footnote{Even if students are warned to use whatever GitHub nick they want, including an anonymous, class-only one. The only thing needed for the teacher is to be able to clearly identify which student corresponds to every nick}. These are publicly available at \url{https://github.com/JJ/ivR}.
+
+The main source of data is the per-objective file that is modified by the students to insert a link to the PR they've created in their own repository. When a mark is made indicating that the objective has been cleared,  automatic workflows analyze these files to generate a data file that records these events and when they occur. This file is the single source of truth for the state of every objective for every student, and will be analyzed to study the progress of the class.
 
 Next we will choose metrics and analyze the kind of insights we can obtain from them, and how they can be used to improve learning outcomes.
 
